Fix bottom gap of item settings and make header rows more rhythmic (#1529)

--- a/styles/less/global/item-header.less
+++ b/styles/less/global/item-header.less
@@ -160,7 +160,7 @@
             .item-description {
                 display: flex;
                 flex-direction: column;
-                gap: 10px;
+                gap: 7px;
             }
 
             h3 {
